# agent-proxy-rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  release.toml
.broken-crates/tests/: Cargo.toml
.broken-crates/tests/fixtures/: anthropic_request.json  large_tools_array.json  streaming_sse.txt
.broken-crates/tests/src/: lib.rs
.broken-crates/tests/tests/: bridge.rs  compression.rs  failover.rs  passthrough.rs  streaming.rs
.github/workflows/: release.yml
apps/cli/: Cargo.toml
apps/cli/src/: config.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: admin.rs  admin_auth.rs  health_probe.rs  main.rs
crates/bridge/: Cargo.toml  README.md
crates/bridge/bridge/: Cargo.toml  Cargo.toml.bak
crates/bridge/src/: lib.rs
crates/compress/: Cargo.toml  README.md
crates/compress/src/: lib.rs  token_counter.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: auth.rs  compression.rs  config.rs  error.rs  extensions.rs  lib.rs  middleware.rs  report.rs  server.rs  testing.rs  types.rs
crates/cost/: Cargo.toml  README.md
crates/cost/src/: lib.rs
crates/model-router/: Cargo.toml  README.md
crates/model-router/src/: lib.rs  types.rs
crates/resilience/: Cargo.toml  README.md
crates/resilience/src/: circuit_breaker.rs  lib.rs  rate_limiter.rs  retry.rs
crates/storage/: Cargo.toml  README.md
crates/storage-sqlite/: Cargo.toml  README.md
crates/storage-sqlite/migrations/: 001_init.sql  002_health_fields.sql  002_model_aliases.sql  003_savings_fields.sql  004_switch_logs_auth.sql  005_pricing_snapshot.sql  006_billing_correlation.sql
crates/storage-sqlite/seed/: channels.json  model_mappings.json  models.json  providers.json  seed-manifest.json
crates/storage-sqlite/src/: lib.rs  seed.rs
crates/storage-sqlite/tests/: storage_contract.rs
crates/storage/src/: error.rs  lib.rs  types.rs
docs/: admin-api.md  architecture.md  channel-redesign.md  codegraph-usage.md  concepts.md  data-flow.md  deployment.md  high-risk-task-guideline.md  index.md  pre-commit-usage.md  prompt-template-library.md  release-guide.md  ruflo-usage.md  search.md  sparc-usage-guideline.md  tdd-guideline.md  user-guide.md
docs/research/: billing-improvement-analysis.md  cost-context-completeness.md  sse-usage-analysis.md  upstream-channel-tracking.md
scripts/: release.sh  start.sh
specs/: 0001-architecture.md  0002-middleware-engine.md  0003-channel-model.md  0004-cost-tracking.md  0005-builtin-channels.md  0006-compress-crate.md  0007-bridge-crate.md  0008-security.md  0009-deployment.md  0010-configuration.md  0011-error-handling.md  0012-testing-strategy.md  0013-rate-limiting.md  0014-storage-abstraction.md  0015-health-state-machine.md  0016-admin-api-extension.md  0017-stats-reporting.md  0018-tiered-pricing.md  0019-remote-seed-data.md  README.md  channel-redesign.md  index.md
tests/: Cargo.toml  Cargo.toml.bak
tests/fixtures/: channels.yaml  openai_request.json
tests/src/: lib.rs
tests/tests/: bridge.rs  compression.rs  failover.rs  passthrough.rs  streaming.rs
