[workspace]
members = ["crates/*", "apps/*", "tests"]
resolver = "3"

[workspace.package]
version = "1.0.0"
authors = ["baoyx <baoyx19870908@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
documentation = "https://docs.rs/agent-proxy-rust"
repository = "https://github.com/TokenFleet-AI/agent-proxy-rust"
homepage = "https://github.com/TokenFleet-AI/agent-proxy-rust"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rstest = "0.24"

# workspace crates
agent-proxy-rust-core = { path = "crates/core" }
agent-proxy-rust-storage = { path = "crates/storage" }
agent-proxy-rust-model-router = { path = "crates/model-router" }
agent-proxy-rust-cost = { path = "crates/cost" }
agent-proxy-rust-storage-sqlite = { path = "crates/storage-sqlite" }
agent-proxy-rust-bridge = { path = "crates/bridge" }
agent-proxy-rust-compress = { path = "crates/compress" }

# External protocol translation
llm-bridge-core = "0.2.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
pedantic = "warn"
