[workspace]
members = ["crates/*", "apps/*", "tests"]
resolver = "3"

[workspace.package]
version = "1.2.0"
authors = ["baoyx <baoyx19870908@gmail.com>"]
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
documentation = "https://docs.rs/agent-proxy-rust"
repository = "https://github.com/TokenFleet-AI/agent-proxy-rust"
homepage = "https://github.com/TokenFleet-AI/agent-proxy-rust"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rstest = "0.26"

# workspace crates
agent-proxy-rust-core = { path = "crates/core", version = "1.2.0" }
agent-proxy-rust-storage = { path = "crates/storage", version = "1.2.0" }
agent-proxy-rust-model-router = { path = "crates/model-router", version = "1.2.0" }
agent-proxy-rust-cost = { path = "crates/cost", version = "1.2.0" }
agent-proxy-rust-storage-sqlite = { path = "crates/storage-sqlite", version = "1.2.0" }
agent-proxy-rust-bridge = { path = "crates/bridge", version = "1.2.0" }
agent-proxy-rust-compress = { path = "crates/compress", version = "1.2.0" }

# External protocol translation
llm-bridge-core = "0.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
pedantic = "warn"
