[package]
name = "agent-proxy-e2e-tests"
description = "E2E integration tests for agent-proxy-rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-proxy-rust-core.workspace = true
agent-proxy-rust-bridge.workspace = true
serde_json.workspace = true
serde = { version = "1.0", features = ["derive"] }
secrecy = "0.10"

[dev-dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum = { version = "0.8" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
expect_used = "allow"
unwrap_used = "allow"
panic = "allow"
todo = "warn"
pedantic = "warn"
missing_panics_doc = "allow"
