[package]
name = "agent-proxy-cli"
description = "CLI binary for agent-proxy — AI Agent Protocol Proxy"
categories = ["development-tools"]
keywords = ["ai", "agent", "proxy", "llm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "agent-proxy"
path = "src/main.rs"

[dependencies]
agent-proxy-rust-core.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.15", features = ["yaml"] }
dirs = "6.0"
serde_yaml = "0.9"

[lints]
workspace = true
