[package]
name = "agent-proxy-rust-server"
description = """

"""
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-proxy-rust-core.workspace = true
agent-proxy-rust-storage.workspace = true
agent-proxy-rust-storage-sqlite.workspace = true
agent-proxy-rust-model-router.workspace = true
agent-proxy-rust-cost.workspace = true
anyhow.workspace = true
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
