[package]
name = "agent-proxy-rust-bridge"
description = "Protocol translation bridge middleware for agent-proxy-rust"
categories = ["development-tools"]
keywords = ["protocol", "bridge", "translation", "llm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-proxy-rust-core = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
http = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
tracing = { workspace = true }
llm-bridge-core = { workspace = true }

[dev-dependencies]
http = "1"
rstest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
