[package]
name = "agent-proxy-rust-cost"
description = "Cost tracking middleware for agent-proxy-rust"
categories = ["development-tools"]
keywords = ["cost", "tracking", "proxy", "llm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-proxy-rust-core = { path = "../core", version = "1.2.1" }
agent-proxy-rust-storage = { path = "../storage", version = "1.2.1" }
agent-proxy-rust-model-router = { path = "../model-router", version = "1.2.1" }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
