[package]
name = "agent-proxy-rust-resilience"
description = "Resilience middlewares: rate limiter, retry, circuit breaker"
categories = ["development-tools"]
keywords = ["rate-limiter", "retry", "circuit-breaker", "resilience"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-proxy-rust-core = { path = "../core", version = "1.1.1" }
async-trait = "0.1"
bytes = "1"
http = "1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
